manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc
  template:
    metadata:
      labels:
        app: poc
    spec:
      containers:
        - name: ping-pong
          image: mluukkai/poc:v4
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
