manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: poc-svc
  labels:
    app: poc  
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"poc-be-config"}}'
    cloud.google.com/neg: '{"ingress": true}'  
spec:
  type: NodePort
  selector:
    app: poc
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
